// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`balJSONlegacy2balJSON > should convert BAL JSON legacy into BAL JSON with BanIDs 1`] = `
[
  {
    "cad_parcelles": [
      "212860000C0115",
      "212860000C0114",
    ],
    "certification_commune": true,
    "cle_interop": "21286_2xdjog_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.769923,
    "lieudit_complement_nom": "La voie celeste",
    "long": 1.081243,
    "numero": 1,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-24 @v:mocked-uuid-23",
    "voie_nom": "Rue Rhoam Bosphoramus",
    "x": 558993.3,
    "y": 6853915.9,
  },
  {
    "cad_parcelles": [
      "212860000C0115",
      "212860000C0114",
    ],
    "certification_commune": true,
    "cle_interop": "21286_2xdjog_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.770269,
    "lieudit_complement_nom": "La voie celeste",
    "long": 1.081148,
    "numero": 1,
    "position": "logement",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-24 @v:mocked-uuid-23",
    "voie_nom": "Rue Rhoam Bosphoramus",
    "x": 558987.26,
    "y": 6853954.53,
  },
  {
    "cad_parcelles": [
      "212860000C0237",
      "212860000C0107",
    ],
    "certification_commune": true,
    "cle_interop": "21286_2xdjog_00002",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.769615,
    "lieudit_complement_nom": "La voie celeste",
    "long": 1.081444,
    "numero": 2,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-25 @v:mocked-uuid-23",
    "voie_nom": "Rue Rhoam Bosphoramus",
    "x": 559007.24,
    "y": 6853881.3,
  },
  {
    "cad_parcelles": [],
    "certification_commune": true,
    "cle_interop": "21286_mz58hg_00029",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.773553,
    "lieudit_complement_nom": "",
    "long": 1.086279,
    "numero": 29,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-27 @v:mocked-uuid-26",
    "voie_nom": "Allée des Prodiges",
    "x": 559373.1,
    "y": 6854310.41,
  },
  {
    "cad_parcelles": [],
    "certification_commune": true,
    "cle_interop": "21286_mz58hg_00031",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.773833,
    "lieudit_complement_nom": "Observatoire d’Hyrule",
    "long": 1.08586,
    "numero": 31,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-28 @v:mocked-uuid-26",
    "voie_nom": "Allée des Prodiges",
    "x": 559343.07,
    "y": 6854342.28,
  },
  {
    "cad_parcelles": [],
    "certification_commune": true,
    "cle_interop": "21286_mz58hg_00033",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.774035,
    "lieudit_complement_nom": "",
    "long": 1.085574,
    "numero": 33,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-29 @v:mocked-uuid-26",
    "voie_nom": "Allée des Prodiges",
    "x": 559322.6,
    "y": 6854365.24,
  },
  {
    "cad_parcelles": [
      "212860000D0113",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.763273,
    "lieudit_complement_nom": "",
    "long": 1.085624,
    "numero": 1,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-31 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559297.27,
    "y": 6853168.91,
  },
  {
    "cad_parcelles": [
      "212860000D0113",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00003",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.763191,
    "lieudit_complement_nom": "Relai d’Hylia",
    "long": 1.08535,
    "numero": 3,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-32 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559276.91,
    "y": 6853160.29,
  },
  {
    "cad_parcelles": [
      "212860000D0305",
      "212860000D0307",
      "212860000D0308",
      "212860000D0266",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00005",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.762971,
    "lieudit_complement_nom": "",
    "long": 1.085079,
    "numero": 5,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-33 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559256.41,
    "y": 6853136.32,
  },
  {
    "cad_parcelles": [
      "212860000D0293",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00007",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.76266,
    "lieudit_complement_nom": "",
    "long": 1.084526,
    "numero": 7,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-34 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559214.93,
    "y": 6853102.73,
  },
  {
    "cad_parcelles": [
      "21286000ZC0087",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00008",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.762421,
    "lieudit_complement_nom": "",
    "long": 1.082967,
    "numero": 8,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-35 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559099.72,
    "y": 6853078.95,
  },
  {
    "cad_parcelles": [
      "212860000D0290",
      "212860000D0292",
      "212860000D0273",
      "212860000D0288",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00009",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.76238,
    "lieudit_complement_nom": "",
    "long": 1.083096,
    "numero": 9,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-36 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559109.09,
    "y": 6853074.16,
  },
  {
    "cad_parcelles": [
      "212860000D0053",
      "212860000D0054",
    ],
    "certification_commune": true,
    "cle_interop": "21286_p899mr_00010",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.762015,
    "lieudit_complement_nom": "",
    "long": 1.082305,
    "numero": 10,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-37 @v:mocked-uuid-30",
    "voie_nom": "Route de la Baleine",
    "x": 559049.98,
    "y": 6853035,
  },
  {
    "cad_parcelles": [
      "212860000D0304",
      "212860000D0229",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00003",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.759711,
    "lieudit_complement_nom": "",
    "long": 1.086349,
    "numero": 3,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-39 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559340.95,
    "y": 6852771.7,
  },
  {
    "cad_parcelles": [
      "212860000D0230",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00005",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.759821,
    "lieudit_complement_nom": "",
    "long": 1.086628,
    "numero": 5,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-40 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559361.75,
    "y": 6852783.43,
  },
  {
    "cad_parcelles": [
      "212860000D0237",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00006",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.759802,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.086775,
    "numero": 6,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-41 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559372.5,
    "y": 6852781.05,
  },
  {
    "cad_parcelles": [
      "212860000D0150",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00007",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760002,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.086974,
    "numero": 7,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-42 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559387.66,
    "y": 6852802.93,
  },
  {
    "cad_parcelles": [
      "212860000D0236",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00008",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760129,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.087306,
    "numero": 8,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-43 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559412.4,
    "y": 6852816.45,
  },
  {
    "cad_parcelles": [
      "212860000D0148",
      "212860000D0284",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00009",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760315,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.087483,
    "numero": 9,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-44 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559425.91,
    "y": 6852836.81,
  },
  {
    "cad_parcelles": [
      "212860000D0143",
    ],
    "certification_commune": true,
    "cle_interop": "21286_0040_00011",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760488,
    "lieudit_complement_nom": "",
    "long": 1.087958,
    "numero": 11,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-45 @v:mocked-uuid-38",
    "voie_nom": "Chemin de la legende",
    "x": 559461.28,
    "y": 6852855.2,
  },
  {
    "cad_parcelles": [],
    "certification_commune": true,
    "cle_interop": "21286_0085_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.773412,
    "lieudit_complement_nom": "Empreinte du Fleau",
    "long": 1.07932,
    "numero": 1,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-47 @v:mocked-uuid-46",
    "voie_nom": "Impasse des lynels",
    "x": 558861.45,
    "y": 6854307.15,
  },
  {
    "cad_parcelles": [],
    "certification_commune": true,
    "cle_interop": "21286_0085_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.773161,
    "lieudit_complement_nom": "Empreinte du Fleau",
    "long": 1.078832,
    "numero": 1,
    "position": "logement",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-47 @v:mocked-uuid-46",
    "voie_nom": "Impasse des lynels",
    "x": 558824.92,
    "y": 6854280.12,
  },
  {
    "cad_parcelles": [],
    "certification_commune": true,
    "cle_interop": "21286_0085_00002",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.773594,
    "lieudit_complement_nom": "Empreinte du Fleau",
    "long": 1.079699,
    "numero": 2,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @a:mocked-uuid-48 @v:mocked-uuid-46",
    "voie_nom": "Impasse des lynels",
    "x": 558889.78,
    "y": 6854326.7,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_ty2whe_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.758813,
    "lieudit_complement_nom": "",
    "long": 1.088235,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-1",
    "voie_nom": "Etang du sorcier",
    "x": 559477.13,
    "y": 6852668.52,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B019_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.760311,
    "lieudit_complement_nom": "",
    "long": 1.071305,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-3",
    "voie_nom": "Relai d’Hylia",
    "x": 558237.02,
    "y": 6852865.29,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_adckqc_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.751484,
    "lieudit_complement_nom": "",
    "long": 1.071619,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-5",
    "voie_nom": "Arbre Mojo",
    "x": 558236.13,
    "y": 6851883.59,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_t6v2h3_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.785677,
    "lieudit_complement_nom": "",
    "long": 1.060016,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-7",
    "voie_nom": "Passage de Daruk",
    "x": 557476.7,
    "y": 6855705.13,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B023_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.772203,
    "lieudit_complement_nom": "",
    "long": 1.081033,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-9",
    "voie_nom": "La voie celeste",
    "x": 558984.03,
    "y": 6854169.7,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_zpe59o_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.771215,
    "lieudit_complement_nom": "",
    "long": 1.063471,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-11",
    "voie_nom": "Observatoire d’Hyrule",
    "x": 557691.05,
    "y": 6854091.39,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B015_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-08-31T00:00:00.000Z,
    "lat": 48.761039,
    "lieudit_complement_nom": "",
    "long": 1.061001,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-13",
    "voie_nom": "Empreinte du Fleau",
    "x": 557481.79,
    "y": 6852964.76,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B010_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-06-03T00:00:00.000Z,
    "lat": 48.760165,
    "lieudit_complement_nom": "",
    "long": 1.067195,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-15",
    "voie_nom": "Les Bois Perdus",
    "x": 557934.59,
    "y": 6852856.45,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_vwgc9s_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-06-13T00:00:00.000Z,
    "lat": 48.768683,
    "lieudit_complement_nom": "",
    "long": 1.060606,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-17",
    "voie_nom": "Armurerie de l’Ancien Royaume",
    "x": 557473.64,
    "y": 6853815.12,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B040_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.759994,
    "lieudit_complement_nom": "",
    "long": 1.06278,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-19",
    "voie_nom": "Les Quatre Maisons",
    "x": 557609.67,
    "y": 6852845.39,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_k6znad_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2023-01-13T00:00:00.000Z,
    "lat": 48.766076,
    "lieudit_complement_nom": "",
    "long": 1.077283,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:mocked-uuid-0 @v:mocked-uuid-21",
    "voie_nom": "Chemin du Moulin",
    "x": 558691.93,
    "y": 6853495.37,
  },
]
`;

exports[`balJSONlegacy2balJSON > should convert partial BAL JSON legacy into BAL JSON with BanIDs 1`] = `
[
  {
    "cad_parcelles": [
      "212860000C0115,212860000C0114",
    ],
    "certification_commune": false,
    "cle_interop": "21286_2xdjog_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.769923,
    "lieudit_complement_nom": "La voie celeste",
    "long": 1.081243,
    "numero": 1,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:03fb190a-cf5b-4f48-a1ab-7caa4d10e157 @v:mocked-uuid-62",
    "voie_nom": "Rue Rhoam Bosphoramus",
    "x": 558993.3,
    "y": 6853915.9,
  },
  {
    "cad_parcelles": [
      "212860000C0115,212860000C0114",
    ],
    "certification_commune": false,
    "cle_interop": "21286_2xdjog_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.770269,
    "lieudit_complement_nom": "La voie celeste",
    "long": 1.081148,
    "numero": 1,
    "position": "logement",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:03fb190a-cf5b-4f48-a1ab-7caa4d10e157 @v:mocked-uuid-62",
    "voie_nom": "Rue Rhoam Bosphoramus",
    "x": 558987.26,
    "y": 6853954.53,
  },
  {
    "cad_parcelles": [
      "212860000C0237,212860000C0107",
    ],
    "certification_commune": false,
    "cle_interop": "21286_2xdjog_00002",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.769615,
    "lieudit_complement_nom": "La voie celeste",
    "long": 1.081444,
    "numero": 2,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:d19b14c9-d9d0-478f-b741-c973d05c343f @v:mocked-uuid-62",
    "voie_nom": "Rue Rhoam Bosphoramus",
    "x": 559007.24,
    "y": 6853881.3,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_mz58hg_00029",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.773553,
    "lieudit_complement_nom": "",
    "long": 1.086279,
    "numero": 29,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:4afc82e4-694e-4bb3-81cb-0a32cd59a300 @v:aaaaaaaa-0000-4000-9000-ffffffffffff",
    "voie_nom": "Allée des Prodiges",
    "x": 559373.1,
    "y": 6854310.41,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_mz58hg_00031",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.773833,
    "lieudit_complement_nom": "Observatoire d’Hyrule",
    "long": 1.08586,
    "numero": 31,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:18510122-0ad8-49fe-bbae-ca484d8f4e01 @v:aaaaaaaa-0000-4000-9000-ffffffffffff",
    "voie_nom": "Allée des Prodiges",
    "x": 559343.07,
    "y": 6854342.28,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_mz58hg_00033",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.774035,
    "lieudit_complement_nom": "",
    "long": 1.085574,
    "numero": 33,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:29387aa3-1dc6-4e38-a1e9-aea350c91296 @v:aaaaaaaa-0000-4000-9000-ffffffffffff",
    "voie_nom": "Allée des Prodiges",
    "x": 559322.6,
    "y": 6854365.24,
  },
  {
    "cad_parcelles": [
      "212860000D0113",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.763273,
    "lieudit_complement_nom": "",
    "long": 1.085624,
    "numero": 1,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:577e9019-42bb-4965-b287-fe4cebe41038 @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559297.27,
    "y": 6853168.91,
  },
  {
    "cad_parcelles": [
      "212860000D0113",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00003",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.763191,
    "lieudit_complement_nom": "Relai d’Hylia",
    "long": 1.08535,
    "numero": 3,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:61b54625-bef6-4450-95e1-b6f37d93441a @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559276.91,
    "y": 6853160.29,
  },
  {
    "cad_parcelles": [
      "212860000D0305,212860000D0307,212860000D0308,212860000D0266",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00005",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.762971,
    "lieudit_complement_nom": "",
    "long": 1.085079,
    "numero": 5,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:28fd0d23-9f3a-4ac0-8e17-05f851546f34 @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559256.41,
    "y": 6853136.32,
  },
  {
    "cad_parcelles": [
      "212860000D0293",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00007",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.76266,
    "lieudit_complement_nom": "",
    "long": 1.084526,
    "numero": 7,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:7a9e11ff-31b6-4f14-8494-55369e7dce04 @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559214.93,
    "y": 6853102.73,
  },
  {
    "cad_parcelles": [
      "21286000ZC0087",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00008",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.762421,
    "lieudit_complement_nom": "",
    "long": 1.082967,
    "numero": 8,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:5139b74a-f569-4008-aade-3bb955186134 @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559099.72,
    "y": 6853078.95,
  },
  {
    "cad_parcelles": [
      "212860000D0290|212860000D0292|212860000D0273|212860000D0288",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00009",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.76238,
    "lieudit_complement_nom": "",
    "long": 1.083096,
    "numero": 9,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:5114f638-f99d-4da2-b3ed-d2e2c3a32765 @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559109.09,
    "y": 6853074.16,
  },
  {
    "cad_parcelles": [
      "212860000D0053|212860000D0054",
    ],
    "certification_commune": false,
    "cle_interop": "21286_p899mr_00010",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.762015,
    "lieudit_complement_nom": "",
    "long": 1.082305,
    "numero": 10,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:2480fe76-bbd8-4703-a41a-5c43fd3c5891 @v:468d0b9b-ec0c-448d-8188-4e28762251e2",
    "voie_nom": "Route de la Baleine",
    "x": 559049.98,
    "y": 6853035,
  },
  {
    "cad_parcelles": [
      "212860000D0304|212860000D0229",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00003",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.759711,
    "lieudit_complement_nom": "",
    "long": 1.086349,
    "numero": 3,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:6edd2c77-e8db-4384-bbb6-810e868d4dee @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559340.95,
    "y": 6852771.7,
  },
  {
    "cad_parcelles": [
      "212860000D0230",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00005",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.759821,
    "lieudit_complement_nom": "",
    "long": 1.086628,
    "numero": 5,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:f1a28bf1-fac3-41f0-8cb4-3abc82b2b963 @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559361.75,
    "y": 6852783.43,
  },
  {
    "cad_parcelles": [
      "212860000D0237",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00006",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.759802,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.086775,
    "numero": 6,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:1890569a-d05f-4cf9-b27b-9172c497023e @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559372.5,
    "y": 6852781.05,
  },
  {
    "cad_parcelles": [
      "212860000D0150",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00007",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760002,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.086974,
    "numero": 7,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:e9de2ecf-e082-448b-9a21-fe9d38d017ae @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559387.66,
    "y": 6852802.93,
  },
  {
    "cad_parcelles": [
      "212860000D0236",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00008",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760129,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.087306,
    "numero": 8,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:e6278261-1a1b-4606-9c20-a8f2d06738fa @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559412.4,
    "y": 6852816.45,
  },
  {
    "cad_parcelles": [
      "212860000D0148|212860000D0284",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00009",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760315,
    "lieudit_complement_nom": "Les Bois Perdus",
    "long": 1.087483,
    "numero": 9,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:ff8bb658-3f73-4ac3-ab04-7966e869e991 @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559425.91,
    "y": 6852836.81,
  },
  {
    "cad_parcelles": [
      "212860000D0143",
    ],
    "certification_commune": false,
    "cle_interop": "21286_0040_00011",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.760488,
    "lieudit_complement_nom": "",
    "long": 1.087958,
    "numero": 11,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:48691fd6-a611-4335-b346-a05679bcb31d @v:c9b6df77-638b-4b30-991e-71486a91ea95",
    "voie_nom": "Chemin de la legende",
    "x": 559461.28,
    "y": 6852855.2,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_0085_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.773412,
    "lieudit_complement_nom": "Empreinte du Fleau",
    "long": 1.07932,
    "numero": 1,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:aeda3e20-8204-4d2b-8e59-184df887ae4e @v:c965715f-3874-4cba-ae4e-c9afa585f5eb",
    "voie_nom": "Impasse des lynels",
    "x": 558861.45,
    "y": 6854307.15,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_0085_00001",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.773161,
    "lieudit_complement_nom": "Empreinte du Fleau",
    "long": 1.078832,
    "numero": 1,
    "position": "logement",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:aeda3e20-8204-4d2b-8e59-184df887ae4e @v:c965715f-3874-4cba-ae4e-c9afa585f5eb",
    "voie_nom": "Impasse des lynels",
    "x": 558824.92,
    "y": 6854280.12,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_0085_00002",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2021-09-06T00:00:00.000Z,
    "lat": 48.773594,
    "lieudit_complement_nom": "Empreinte du Fleau",
    "long": 1.079699,
    "numero": 2,
    "position": "entrée",
    "source": "commune",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @a:8c12024d-6216-4634-aca0-598f569d632b @v:c965715f-3874-4cba-ae4e-c9afa585f5eb",
    "voie_nom": "Impasse des lynels",
    "x": 558889.78,
    "y": 6854326.7,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_ty2whe_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.758813,
    "lieudit_complement_nom": "",
    "long": 1.088235,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:mocked-uuid-58",
    "voie_nom": "Etang du sorcier",
    "x": 559477.13,
    "y": 6852668.52,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B019_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.760311,
    "lieudit_complement_nom": "",
    "long": 1.071305,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:f52cf4c8-df1d-4619-9a64-0b0b3ee01c4e",
    "voie_nom": "Relai d’Hylia",
    "x": 558237.02,
    "y": 6852865.29,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_adckqc_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.751484,
    "lieudit_complement_nom": "",
    "long": 1.071619,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:d447b2d5-ff6d-42bc-8cb2-7efbfa2030e7",
    "voie_nom": "Arbre Mojo",
    "x": 558236.13,
    "y": 6851883.59,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_t6v2h3_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.785677,
    "lieudit_complement_nom": "",
    "long": 1.060016,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:8b3ae0a2-81ad-45b6-b58a-925868e6a3bc",
    "voie_nom": "Passage de Daruk",
    "x": 557476.7,
    "y": 6855705.13,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B023_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.772203,
    "lieudit_complement_nom": "",
    "long": 1.081033,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:413eb0cb-561a-435a-af8f-d244023f9b40",
    "voie_nom": "La voie celeste",
    "x": 558984.03,
    "y": 6854169.7,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_zpe59o_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-07-03T00:00:00.000Z,
    "lat": 48.771215,
    "lieudit_complement_nom": "",
    "long": 1.063471,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:1748660f-d473-400a-88ad-52d55f3fc9f5",
    "voie_nom": "Observatoire d’Hyrule",
    "x": 557691.05,
    "y": 6854091.39,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B015_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2020-08-31T00:00:00.000Z,
    "lat": 48.761039,
    "lieudit_complement_nom": "",
    "long": 1.061001,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:mocked-uuid-60",
    "voie_nom": "Empreinte du Fleau",
    "x": 557481.79,
    "y": 6852964.76,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B010_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-06-03T00:00:00.000Z,
    "lat": 48.760165,
    "lieudit_complement_nom": "",
    "long": 1.067195,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:16e337a0-d0c7-4c24-b8dc-e43edbd4d273",
    "voie_nom": "Les Bois Perdus",
    "x": 557934.59,
    "y": 6852856.45,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_vwgc9s_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-06-13T00:00:00.000Z,
    "lat": 48.768683,
    "lieudit_complement_nom": "",
    "long": 1.060606,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:26d79f86-7051-4c51-a1b1-966fd7f1e345",
    "voie_nom": "Armurerie de l’Ancien Royaume",
    "x": 557473.64,
    "y": 6853815.12,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_B040_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2022-08-23T00:00:00.000Z,
    "lat": 48.759994,
    "lieudit_complement_nom": "",
    "long": 1.06278,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:17ec2d21-8c66-4a43-921e-817fb489f899",
    "voie_nom": "Les Quatre Maisons",
    "x": 557609.67,
    "y": 6852845.39,
  },
  {
    "cad_parcelles": [],
    "certification_commune": false,
    "cle_interop": "21286_k6znad_99999",
    "commune_deleguee_insee": "",
    "commune_deleguee_nom": "",
    "commune_insee": "21286",
    "commune_nom": "Cocorico",
    "date_der_maj": 2023-01-13T00:00:00.000Z,
    "lat": 48.766076,
    "lieudit_complement_nom": "",
    "long": 1.077283,
    "numero": 99999,
    "position": "",
    "source": "",
    "suffixe": "",
    "uid_adresse": "@c:e2b5c142-3eb3-4d07-830a-3d1a59195dfd @v:e89808c4-7f7e-46f3-b3a8-d40e4b783d8d",
    "voie_nom": "Chemin du Moulin",
    "x": 558691.93,
    "y": 6853495.37,
  },
]
`;
